apps/base/somen-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: somen-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: somen-backend
  template:
    metadata:
      labels:
        app: somen-backend
    spec:
      containers:
        - name: somen-backend
          image: registry.kube.slc.net/slc/somen-back-end:0.0.5 # {"$imagepolicy": "production:somen-backend-policy"}
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 3000
