apps/base/somen-backend/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: somen-backend-httproute
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: web
    namespace: traefik
  hostnames:
  - api-somen.kube.slc.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
