apps/base/somen-backend/httpsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: somen-backend-httpsroute
  labels:
    gateway: traefik-gateway
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: websecure
    namespace: traefik
  hostnames:
  - api-somen.kube.slc.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: somen-backend-service
      port: 6969
